# filebrowser-rust

./: .gitignore  Cargo.toml  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  config.json  install.sh  largefile.txt  service.bat  service.sh
src/: config.rs  main.rs  scanner.rs
static/: app.js  index.html  style.css
